# NexusOS

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GET_STARTED.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  build.sh
.github/workflows/: build.yml
boot/grub/: grub.cfg
docs/: ARCHITECTURE.md  COMPILATION.md  FAQ.md
kernel/arch/x86_64/: boot.asm  interrupt_handlers.asm  linker.ld
kernel/core/: interrupts.cpp  kernel.cpp  scheduler.c
kernel/drivers/keyboard/: keyboard.c
kernel/drivers/pci/: pci.c
kernel/drivers/timer/: timer.c
kernel/drivers/video/: video.c
kernel/fs/: vfs.c
kernel/include/: interrupts.h  io.h  keyboard.h  memory.h  pci.h  scheduler.h  shell.h  stdarg.h  timer.h  types.h  vfs.h  video.h
kernel/mm/: memory.c
scripts/: test.sh
userland/shell/: shell.c
